# icarus

./: .gitignore  README.md  create_dataset.sh  dataloader.py  dataset_generator.py  ground_truth_generator.py  ground_truth_thermal_sim_out.e  model.py  model_1.py  model_2.py  moose-config.json  pyproject.toml  rename.py  requirements.txt  thermal_model.i  thermal_model_2.i  thermal_model_3.i  utils.py
data/: ground_truth_thermal_sim_out.e  sweep-vars-1.json
dataset/1/: output-key-1.json  sim-1-1.i  sim-1-10.i  sim-1-100.i  sim-1-1000.i  sim-1-1001.i  sim-1-1002.i  sim-1-1003.i  sim-1-1004.i  sim-1-1005.i  sim-1-1006.i  sim-1-1007.i  sim-1-1008.i  sim-1-1009.i  sim-1-101.i  sim-1-1010.i  sim-1-1011.i  sim-1-1012.i  sim-1-1013.i  sim-1-1014.i  sim-1-1015.i  (+2482 more)
docs/: README.md
examples/: ex0_create_moose_config.py  ex0_generate_thermal_dataset_2d.py  ex0_load_existing_data.py  ex1a_generate_thermal_sims_2d.py  ex1a_run_mlp_model.py  ex1b_run_mlp_model.py  ex2a_process_2d_data.py  ex2b_process_monoblock_data.py  ex3a_run_mlp_model.py  ex4_run_all.py  ex_00_create_moose_config.py  example_2d_plate_out.e
mechanical/: __init__ (5) (1).py  ex1a_generate_mechanical_sims_2d (1).py  ex1b_generate_mechanical_sims_monoblock (1).py  ex2b_process_mechanical_monoblock_data (1).py  mechanical_dataloader (1).py  mechanical_datasets (1).py  mechanical_model_classification.py  mechanical_moose-config (2) (1).json  mechanical_sample_generator (1).py  mechanical_utils (1).py  run_all_cnn_mechanical.py  run_cnn_mechanical_model.py
src/: __init__.py  dataloader.py  dataset_generator.py
(+24370 files in other folders)
