[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icarus-fusion"
version = "0.1.6"
description = "A machine learning tool for fusion simulation validation."
authors = [
  { name = "arjavp-ukaea", email = "arjav.poudel@ukaea.uk" },
  { name = "barisc-ukaea", email = "baris.cavusoglu@ukaea.uk"},
  { name = "lukethehuman", email = "luke.humphrey@ukaea.uk"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.0",
  "netCDF4>=1.6.5",
  "scikit-learn>=1.5.0",
  "scikit-optimize>=0.10.2",
  "mooseherder>=0.1.0",
  "matplotlib>=3.8.0",
  "tqdm>=4.66.4",
  "scipy==1.11.3",
]

[project.urls]
"Repository" = "https://github.com/aurora-multiphysics/icarus"
"Issue Tracker" = "https://github.com/aurora-multiphysics/icarus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"icarus" = ["data/*.npz"]